--- a/previous-work/previous-work.css
+++ b/previous-work/previous-work.css
@@ -40,22 +40,6 @@
   padding: 4px;
 }
 
-/* Each image takes up about 1/3 of the flex-container so that they don't overlap: */
-.oofty-image {
-  width: 32%;
-  margin: auto;
-  object-fit: cover;
-  margin: 8px 0 8px 0; /* Makes the images take up whole height */
-  padding: 4px;
-}
-
-/* Same as oofty images: */
-.pool-image {
-  width: 32%;
-  margin: auto;
-  padding: 4px;
-}
-
 /* Center the modal title: */
 h5.modal-title {
   margin: auto;
@@ -112,20 +96,12 @@ h5.modal-title {
   background-color: #0e76a8;
   border-color: whitesmoke;
 }
-.yelp {
-  grid-column-start: 3;
-  grid-row-start: 2;
-
-  color: whitesmoke;
-  background-color: #c41200;
-  border-color: whitesmoke;
-}
 
 /* All buttons have white background and black text color on mouse hover for consistency: */
 .resume:hover,
 .github:hover,
-.linkedin:hover,
-.yelp:hover {
+.linkedin:hover
+{
   background-color: white;
   color: black;
   border-color: black;
@@ -149,13 +125,6 @@ h5.modal-title {
     margin: auto;
     display: inline-block;
     overflow: visible;
-  }
-
-  /* Each image is as wide as the container: */
-  .oofty-image {
-    width: 100%;
-    margin: auto;
-    padding: 5px;
   }
 
   /* Same as oofty images: */
