--- a/my-projects/my-projects.css
+++ b/my-projects/my-projects.css
@@ -12,23 +12,24 @@
   display: none;
 }
 
+/*
 div.gallery {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-}
+}*/
 
-div.gallery-item {
+/*div.gallery-item {
   margin: 5px;
   border: 1px solid #ccc;
   width: 180px;
-}
+}*/
 
 div.gallery-item:hover {
   border: 1px solid #777;
 }
 
-div.gallery-item img {
+/*div.gallery-item img {
   width: 100%;
   height: auto;
 }
@@ -36,7 +37,7 @@ div.gallery-item img {
 div.gallery-item div.desc {
   padding: 15px;
   text-align: center;
-}
+}*/
 
 /*  Creating the black opacity background of the page:*/
 .card-deck {
@@ -131,4 +132,33 @@ div.gallery-item div.desc {
     height: 11rem;
     overflow: hidden;
   }
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); /* 2 items per row */
+  gap: 30px;
+  max-width: 700px;   /* optional */
+  margin: 0 auto;     /* center the gallery */
+}
+
+.gallery-item {
+  text-align: center;
+}
+
+.gallery-item img {
+  width: 100%;
+  height: auto;
+}
+
+@media (max-width: 600px) {
+  .gallery {
+    grid-template-columns: 1fr;
+    gap: 10px;
+    max-width: 70%;   /* optional */
+  }
+}
+
+#copy-right {
+  text-align: center;
 }
