--- a/my-projects/my-projects.css
+++ b/my-projects/my-projects.css
@@ -12,32 +12,22 @@
   display: none;
 }
 
-/*
-div.gallery {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-}*/
+main {
+  background: rgb(0, 0, 0, 0.8);
+  border-radius: 20px;
+  color: whitesmoke;
+  width: 70%;
+  margin: auto;
+}
 
-/*div.gallery-item {
-  margin: 5px;
-  border: 1px solid #ccc;
-  width: 180px;
-}*/
+.gallery-item {
+  padding: 10px;
+  width: 100%;
+}
 
 div.gallery-item:hover {
   border: 1px solid #777;
 }
-
-/*div.gallery-item img {
-  width: 100%;
-  height: auto;
-}
-
-div.gallery-item div.desc {
-  padding: 15px;
-  text-align: center;
-}*/
 
 /*  Creating the black opacity background of the page:*/
 .card-deck {
